list nodes endpoint
